# simpleTracking

./: CMakeLists.txt  package.xml
include/simple_tracking/: gpb_segmentation.hpp  kalman_filter.hpp  path.hpp  segmentation.hpp  tracker.hpp
src/: gpb_segmentation.cpp  kalman_filter.cpp  path.cpp  segmentation.cpp  simple_tracking.cpp  tracker.cpp
